# Android-AR-Marker

./: .gitignore  README.md
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml  jniLibs
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/Eigen/: Cholesky  script.py
app/src/main/cpp/aruco/: dictionary.cpp  ippe.h  levmarq.h  marker.cpp  marker.h  markerdetector.cpp  markerlabeler.cpp
app/src/main/java/example/detectmarker/: Constants.java  ImageHelper.java  MainActivity.java
app/src/main/java/example/marker/detection/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: file_path.xml
gradle/wrapper/: gradle-wrapper.properties
